fix grid wrap

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@ h1 {
 
 #container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+
     gap: 15px;
     padding: 24px;
     margin-top: 20px;
